--- a/.github/workflows/push-to-dockerhub.yaml
+++ b/.github/workflows/push-to-dockerhub.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
-          username: ACalderwood93
+          username: acalderwood93
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
