--- a/.github/workflows/push-to-dockerhub.yaml
+++ b/.github/workflows/push-to-dockerhub.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Log in to Docker Hub
-        uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+        uses: docker/login-action@v1
         with:
           username: acalderwood93
           password: ${{ secrets.DOCKERHUB_ACCESS_TOKEN }}
@@ -31,7 +31,7 @@ jobs:
           images: my-docker-hub-namespace/my-docker-hub-repository
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v2
         with:
           context: .
           push: true
