--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.6.3",
-    "graphql": "^16.3.0"
+    "graphql": "^16.3.0",
+    "mongo": "^0.1.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0"
   }
 }
