--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,3 +4,5 @@ services:
     image: acalderwood93/sherlock-api:latest
     ports:
       - "4000:4000"
+    environment:
+      - MONGO_URL=mongodb://panda-server:27017
