--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,4 +5,4 @@ services:
     ports:
       - "4000:4000"
     environment:
-      - MONGO_URL=mongodb://localhost:27017
+      - MONGO_URL=mongodb://mongo-db_mongo_1:27017
